--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
-<title>Redirect to Richard Careaga Portfolio</title>
-<meta http-equiv="refresh" content="1; URL=https://technocrat.github.io/_book">
+<title>Redirect to Richard Careaga Blog</title>
+<meta http-equiv="refresh" content="1; URL=https://technocrat.github.io/doc">
 <meta name="keywords" content="automatic redirection">
 </head>
 <body>
